force-app/main/default/objects/Task/fields/Call_Center_Person__c.field-meta.xml
<CustomField>
    <fullName>Call_Center_Person__c</fullName>
    <label>Temsilci</label>
    <type>Lookup</type>
    <required>true</required>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Call Center Person Tasks</relationshipLabel>
    <relationshipName>Call_Center_Person_Tasks</relationshipName>
</CustomField>