force-app/main/default/objects/Task/fields/Call_Center_Point__c.field-meta.xml
<CustomField>
    <fullName>Call_Center_Point__c</fullName>
    <label>Puan</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>