force-app/main/default/objects/Task/fields/Call_Duration__c.field-meta.xml
<CustomField>
    <fullName>Call_Duration__c</fullName>
    <label>Arama Süresi</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>