force-app/main/default/objects/Task/fields/Call_End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Call_End_DateTime__c</fullName>
    <label>Arama Bitiş</label>
    <type>DateTime</type>
</CustomField>