force-app/main/default/objects/Task/fields/Call_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Call_Reasons__c</fullName>
    <label>Arama Nedeni</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arıza Devam Ediyor</fullName>
            </value>
            <value>
                <fullName>Beni Kimse Aramadı</fullName>
            </value>
            <value>
                <fullName>Müşteri Aradı</fullName>
            </value>
            <value>
                <fullName>Diğer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>