force-app/main/default/objects/Task/fields/Call_Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Call_Start_DateTime__c</fullName>
    <label>Arama Başlangıç</label>
    <type>DateTime</type>
</CustomField>