force-app/main/default/objects/Task/fields/Is_FLS_Done__c.field-meta.xml
<CustomField>
    <fullName>Is_FLS_Done__c</fullName>
    <label>FLS Yapıldı</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>