force-app/main/default/objects/Task/fields/Related_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Case__c</fullName>
    <label>İlgili Vaka</label>
    <type>Lookup</type>
    <required>true</required>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Related Case Tasks</relationshipLabel>
    <relationshipName>Related_Case_Tasks</relationshipName>
</CustomField>